--- a/tiny-editor-app/package.json
+++ b/tiny-editor-app/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
-    "@electron-forge/cli": "^7.5.0",
+    "@electron-forge/cli": "^7.6.0",
     "@electron-forge/maker-deb": "^7.5.0",
     "@electron-forge/maker-rpm": "^7.5.0",
     "@electron-forge/maker-squirrel": "^7.5.0",
@@ -23,6 +23,7 @@
     "@electron-forge/plugin-fuses": "^7.5.0",
     "@electron-forge/plugin-webpack": "^7.5.0",
     "@electron/fuses": "^1.8.0",
+    "@electron/packager": "^18.3.6",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "babel-loader": "^9.2.1",
     "css-loader": "^6.0.0",
